Configuração inicial do Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active = dev
+spring.profiles.active = test
 
 default.sender = vsant.professional@gmail.com
 default.recipient = victorsb.02@gmail.com
