--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active = test
 
 default.sender = vsant.professional@gmail.com
 default.recipient = victorsb.02@gmail.com
+
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration = 60000
