Salvando imagens em repositório local

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ default.sender = vsant.professional@gmail.com
 default.recipient = victorsb.02@gmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration = 60000
+jwt.expiration = 86400000
