Usando padrão de nomes para imagens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ default.recipient = victorsb.02@gmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration = 86400000
+
+img.prefix.client.profile = cp
