Ajustando tamanho da imagem, adicionando uploadService e transferindo os métodos de upload da ImageService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration = 86400000
 
 img.prefix.client.profile = cp
+img.profile.size = 200
