Aumentando o tamanho máximo para upload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.profiles.active = test
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
-default.sender = vsant.professional@gmail.com
-default.recipient = victorsb.02@gmail.com
+default.sender = 
+default.recipient = 
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration = 86400000
